--- a/app/frontend/src/components/css/login.css
+++ b/app/frontend/src/components/css/login.css
@@ -4,12 +4,14 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
   position: relative;
+  
 }
 
 .logo #img-animated {
-  width: 197px;
-  height: 176px;
+  width: 200px;
+  height: auto;
   opacity: 0;
   animation: animate-logo 2s linear;
   position: absolute;
@@ -20,9 +22,9 @@
 }
 
 .login {
-  background: #FFFFFF;
-  border: 1px solid #707070;
-  border-radius: 67px;
+  
+  
+  
   width: 920px;
   height: 720px;
   position: absolute;
@@ -42,6 +44,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  color: aliceblue;
 }
 
 @keyframes animate-login {
@@ -79,8 +82,8 @@
 
 .logo-login img{
   margin-top: 20px;
-  height: 120px;
-  width: 100px;
+  height: auto;
+  width: 150px;
 }
 
 .login .header-login .title-login {
@@ -123,24 +126,24 @@
   width: 100%;
   height: 50px;
   border: 1px solid #707070;
-  border-radius: 20px;
+ 
   font-size: 20px;
   padding-left: 10px;
 }
 
 .button-login {
-  width: 35%;
+  width: 80%;
 }
 
 .button-login button {
   text-align: center;
-  width: 100%;
-  height: 65px;
+  width: 95%;
+  height: 50px;
   border: none;
   color: #FFFFFF;
   font-size: 21px;
-  background: #FF6F2C;
-  border-radius: 35px;
+  background: #596cfd;
+  border-radius: 8px;
   opacity: 1;
   margin-bottom: 35px;
   cursor: pointer;
@@ -172,8 +175,8 @@
   }
 
   .logo-login img{
-    height: 100px;
-    width: 85px;
+    height: auto;
+    width: 150px;
   }
 
   .inputs-login {
@@ -199,7 +202,7 @@
   }
   
   .button-login {
-    width: 40%;
+    width: 80%;
     height: 70px;
   }
   
