--- a/app/frontend/src/components/css/metaDashboard.css
+++ b/app/frontend/src/components/css/metaDashboard.css
@@ -3,8 +3,23 @@
   justify-content: center;
   max-width: 100vw;
   min-height: 80vh;
-  padding: 16px;
+  padding: 10px;
   margin: 0;
+  background-color: rgb(230, 230, 230);
+}
+
+.panel-2{
+  width: 50%;
+  height: auto;
+  margin: 10px;
+  border-radius: 18px;
+  background-color: #ffffff;
+
+}
+
+.panel-2 h1{
+  margin: 12px;
+  padding-bottom: 1rem;
 }
 
 .metas-main-content {
@@ -14,7 +29,7 @@
 
 .meta-title {
   border-radius: 14px;
-  background: #fed6bf;
+  background: #ffffff;
   height: 150px;
   padding: 15px;
 }
@@ -26,7 +41,7 @@
 
 .aside-description {
   border-radius: 10px;
-  background: #d3fec0;
+  background: #e4fed9;
   padding: 15px;
   min-height: 25vh;
   max-height: fit-content;
@@ -34,18 +49,22 @@
 
 .aside .añadir-button {
   border-radius: 23px;
-  border: 3px solid #91ff80;
+  border: 3px solid #80a6ff;
   width: 100%;
   height: 50px;
   margin:  15px 0;
   font-weight: 600;
-  color: #91ff80;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.fondo-table{
   background-color: #ffffff;
 }
 
 .aside .añadir-button:hover {
   color: black;
-  background-color: #91ff80;
+  background-color: #80a6ff;
 }
 
 .aside .eliminar-button {
@@ -111,13 +130,13 @@
 }
 
 .eliminando-layout {
-  background-color: #f07474de;
+  background-color: #cacacade;
 }
 
 .deleting-button {
   height: 40px;
   width: 40px;
-  background-color: red;
+  background-color: rgb(255, 130, 130);
   border-radius: 7px;
   border: none;
   cursor: pointer;
